MenuRepository, DishService, tests