@@ -1,6 +1,5 @@
 package ru.topjava.voting.model;
 
-import com.fasterxml.jackson.annotation.JsonIgnore;
 import org.springframework.util.CollectionUtils;
 
 import javax.persistence.*;
@@ -9,7 +8,7 @@ import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.List;
+import java.util.Set;
 
 @Entity
 @Table(name = "menu", uniqueConstraints = {@UniqueConstraint(columnNames = {"id", "restaurant_id"}, name = "menu_restaurant_idx")})
@@ -23,16 +22,18 @@ public class Menu extends NamedEntity {
     //@JsonBackReference
     private Restaurant restaurant;
 
-    @ManyToMany
-    @JoinColumn
-    @JsonIgnore
-    private List<Dish> dishes;
+    @ManyToMany(fetch = FetchType.LAZY)
+    @JoinTable(name = "menu_dish",
+            joinColumns = @JoinColumn(name = "menu_id", referencedColumnName = "id"),
+            inverseJoinColumns = @JoinColumn(name = "dish_id", referencedColumnName = "id")
+    )
+    private Set<Dish> dishes;
 
     public Menu() {
     }
 
-    public Menu(LocalDate date, Restaurant restaurant) {
-        this(null, null, date, restaurant, null);
+    public Menu(String name, LocalDate date, Restaurant restaurant) {
+        this(null, name, date, restaurant, null);
     }
 
     public Menu(String name, LocalDate date, Restaurant restaurant, Dish... dishes) {
@@ -43,7 +44,7 @@ public class Menu extends NamedEntity {
         super(id, name);
         this.date = date;
         this.restaurant = restaurant;
-        //setDishes(dishes);
+        setDishes(dishes);
     }
 
     public LocalDate getDate() {
@@ -62,11 +63,23 @@ public class Menu extends NamedEntity {
         this.restaurant = restaurant;
     }
 
-    public List<Dish> getDishes() {
+    public Set<Dish> getDishes() {
         return dishes;
     }
 
     public void setDishes(Collection<Dish> dishes) {
-        this.dishes = CollectionUtils.isEmpty(dishes) ? Collections.<Dish>emptyList() : List.copyOf(dishes);
+        this.dishes = CollectionUtils.isEmpty(dishes) ? Collections.emptySet() : Set.copyOf(dishes);
+    }
+
+    public void addDishes(Dish... dishes) {
+        this.dishes.addAll(Arrays.asList(dishes));
+    }
+
+    public void removeDishes(Dish... dishes) {
+        Arrays.asList(dishes).forEach(this.dishes::remove);
+    }
+
+    public void clearDishes() {
+        dishes.clear();
     }
 }
